Ajustando el tache de la imagenes y dellates de css

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <title>Pandas</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/panda-icon.ico">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise" rel="stylesheet">
   </head>
   <body>
     <section class="contenedor">
       <header class="contenedorNav">
         <nav>
+          <img src="assets/img/panda-icon.ico" alt="panda">
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Pandas</a></li>
           <li><a href="#">Historia</a></li>
-          <li><a href="#">Extincion</a> </li>
+          <li><a href="#">Extinción</a> </li>
         </nav>
       </header>
       <article class="contenedorArticulo">
