Funcionalidad terminada de quitar y restaurar imagenes/textos

--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
       </header>
       <article class="contenedorArticulo">
         <section class="contenedorImg">
-          <div>
+          <div class="imagenBoton">
             <span class="cerrar">&times;</span>
             <img src="assets/img/img6.jpg" class="img"/>
           </div>
-          <div>
+          <div class="imagenBoton">
             <span class="cerrar">&times;</span>
             <img src="assets/img/img4.jpg" class="img"/>
           </div>
-          <div>
+          <div class="imagenBoton">
             <span class="cerrar">&times;</span>
             <img src="assets/img/img1.jpg" class="img"/>
           </div>
-          <div>
+          <div class="imagenBoton">
             <span class="cerrar">&times;</span>
             <img src="assets/img/img2.jpg" class="img"/>
           </div>
         </section>
         <section class="contenedorBotones">
-          <button type="button" name="button">Origen</button>
-          <button type="button" name="button">Extincion</button>
-          <button type="button" name="button">Fotos</button>
+          <button type="button" id="origen">Origen</button>
+          <button type="button" id="extincion">Extincion</button>
+          <button type="button" id="fotos">Fotos</button>
         </section>
         <section class="contenedorParrafo">
-          <p class="p" id="p01">
+          <p class="parrafo" id="p01">
             Kary Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.Lorem Ipsum
             ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor
             (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los
@@ -53,7 +53,7 @@
             contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo
             Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
           </p>
-          <p class="p" id="p02">
+          <p class="parrafo" id="p02">
             Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.Lorem Ipsum
             ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor
             (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los
@@ -65,7 +65,8 @@
           </p>
         </section>
       </article>
-      <footer>By papitasNinja</footer>
+      <footer>By karyvdj</footer>
     </section>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
