Detalles de la funcionalidad de las imagenes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="contenedor">
-      <header class="contenedorNav">
+      <header>
         <nav>
           <img src="assets/img/panda-icon.ico" alt="panda">
           <li><a href="#">Inicio</a></li>
